[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Player & Enemy/anglerfish 2.0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/AnglerFish.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Other/pngfind.com-dark-aura-png-4887855.png" type="Texture" id=3]
[ext_resource path="res://Audio/SFX/Damage(Enemy).wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/SFX/Damage(Player).wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 25.2982

[sub_resource type="CircleShape2D" id=3]
radius = 192.666

[node name="AnglerFish" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Sprite"]
position = Vector2( -24, 3.8147e-06 )
scale = Vector2( 0.0240432, 0.0240432 )
texture = ExtResource( 3 )
energy = 0.5
shadow_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 3 )

[node name="Damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
